# roadside-editor

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  start.bat  vcpkg.json
assets/icons/: app_icon_terrain.psd
assets/sample/: demo_ribbon_erosion.terrainproj  sample_tengudake.terrainproj
assets/ui_themes/: deep_graphite.json  default_dark.json
docs/: changelog.md  uv-space-erosion.md
docs/plan/: goals.md  plan.md  progress.md
shaders/: ao_compute.hlsl  atmosphere.hlsli  atmosphere_multiscatter.hlsl  cloud_density.hlsl  cloud_render.hlsl  cloud_shadow.hlsl  colorize_compute.hlsl  depth_of_field.hlsl  droplet_erosion_compute.hlsl  fluvial_erosion_compute.hlsl  mask_fluvial_compute.hlsl  mask_noise_compute.hlsl  mask_utility_compute.hlsl  mesh_preview.hlsl  multi_scale_erosion_compute.hlsl  rock_compute.hlsl  scatter_compute.hlsl  sediment_compute.hlsl  sky.hlsl  snow_compute.hlsl  tonemap.hlsl
src/: D3D12Utils.cpp  D3D12Utils.h  NodeSerialization.cpp  NodeSerialization.h  PathUtils.cpp  PathUtils.h  ProjectSettingsSerialization.cpp  ProjectSettingsSerialization.h  Version.h.in  ViewportMath.cpp  ViewportMath.h  ViewportSerialization.cpp  ViewportSerialization.h  main.cpp  node_graph.cpp  node_graph.h  obj_exporter.cpp  obj_exporter.h  roadside_editor.rc  screenshot_capture.cpp  screenshot_capture.h  texture_exporter.cpp  texture_exporter.h
src/evaluation/: Colorize.cpp  Colorize.h  DropletErosion.cpp  DropletErosion.h  FluvialErosion.cpp  FluvialErosion.h  GranularSettle.cpp  GranularSettle.h  HeightfieldOps.cpp  HeightfieldOps.h  HeightmapSource.cpp  HeightmapSource.h  MaskNoise.cpp  MaskNoise.h  MaskOps.cpp  MaskOps.h  MultiScaleErosion.cpp  MultiScaleErosion.h  ParticleErosionCommon.h  RibbonSource.cpp  RibbonSource.h  Rock.cpp  Rock.h  Sediment.cpp  Sediment.h  ShapeSource.cpp  ShapeSource.h  Snow.cpp  Snow.h  Soil.cpp  Soil.h  UvChecker.cpp  UvChecker.h
src/gpu/: ColorizeCompute.cpp  ColorizeCompute.h  DropletErosionCompute.cpp  DropletErosionCompute.h  FluvialErosionCompute.cpp  FluvialErosionCompute.h  GpuComputeContext.h  MaskFluvialCompute.cpp  MaskFluvialCompute.h  MaskNoiseCompute.cpp  MaskNoiseCompute.h  MaskUtilityCompute.cpp  MaskUtilityCompute.h  MseCompute.cpp  MseCompute.h  RockCompute.cpp  RockCompute.h  ScatterCompute.cpp  ScatterCompute.h  SedimentCompute.cpp  SedimentCompute.h  SnowCompute.cpp  SnowCompute.h
src/platform/: FileDialogs.cpp  FileDialogs.h  ShellUtils.cpp  ShellUtils.h
src/rendering/: MeshPreviewRenderer.cpp  MeshPreviewRenderer.h
src/ui/: AppFonts.cpp  AppFonts.h  AssetExportPanel.cpp  AssetExportPanel.h  CameraPanel.cpp  CameraPanel.h  DebugPanel.cpp  DebugPanel.h  DisplayPanel.cpp  DisplayPanel.h  Localization.cpp  Localization.h  NodeIcon.cpp  NodeIcon.h  NodePins.cpp  NodePins.h  NodeProperties.cpp  NodeProperties.h  PropertyWidgets.cpp  PropertyWidgets.h  SkyPanel.cpp  SkyPanel.h  UiTheme.cpp  UiTheme.h  WaterPanel.cpp  WaterPanel.h
